# D-D-initiative-tracking

./: CMakeLists.txt  README.md
data/: characters.json  groups.json  sample_encounter.json
docs/: BUILD.md  JSON.md
resources/icons/: README.md
resources/themes/: dark.qss  light.qss
src/: main.cpp
src/core/: Combatant.cpp  Combatant.h  InitiativeTracker.cpp  InitiativeTracker.h
src/models/: Combatant.cpp  Combatant.h  InitiativeModel.cpp  InitiativeModel.h  TurnManager.cpp  TurnManager.h
src/storage/: EncounterStore.cpp  EncounterStore.h  RosterStore.cpp  RosterStore.h  SimpleJson.cpp  SimpleJson.h
src/stores/: EncounterStore.cpp  EncounterStore.h  RosterStore.cpp  RosterStore.h
src/ui/: MainWindow.cpp  MainWindow.h
src/undo/: UndoCommands.cpp  UndoCommands.h
src/utils/: DiceRoller.cpp  DiceRoller.h  Settings.cpp  Settings.h
tests/: TestTurnManager.cpp
